# AI-200

./: .gitignore  README.md  pyproject.toml
azure-ai-language/01-text-analysis/scripts/: text-analysis.py
azure-ai-language/02-qna/scripts/: pyproject.toml  qna.py
azure-ai-language/text-analysis/scripts/: pyproject.toml  text-analysis.py
azure-ai-vision/01-image-analysis/scripts/: pyproject.toml
azure-ai-vision/01-image-analysis/tf/azure/: AIServices.tf
azure-ai-vision/02-face-analysis/scripts/: pyproject.toml
azure-ai-vision/02-face-analysis/tf/: .terraform.lock.hcl  Modules.tf  Variables.tf
azure-ai-vision/03-text-analysis/scripts/: text-analysis.py
azure-ai-vision/face-analysis/scripts/: face-analysis.py
azure-ai-vision/face-analysis/tf/azure/: Rg.tf
azure-ai-vision/image-analysis/scripts/: config.ini  image-analysis.py  pyproject.toml
azure-ai-vision/image-analysis/tf/azure/: AIServices.tf
terraform-modules/azure-ai-services/: locals.tf  main.tf  outputs.tf
